--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 </ul>
                 </code></div>
             </code>
+                <figure>
+                <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_10.jpeg" alt="Choosing starter">
+                <figcaption>Choosing your starter pokemon</figcaption>
+                </figure>
                 <h2>Slumberin Weald and Route 1</h2>
                 <p>Head back up towards your house and the Wooloo will have finally broken through that pesky gate,
                     standing in the way of Wooloo's hopes and dreams. Pick the option to save Wooloo and head into the
@@ -54,6 +58,10 @@
                     what has it done with the poor Wooloo?! You'll be thrown into a battle against the legendary best,
                     but you can't deal any damage to it. Try a few times and you'll be knocked unconscious, when Leon
                     will find and rescue you, along with finding Wooloo safe and sound.</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_8.jpeg" alt="Choosing starter">
+                        <figcaption>Encounter with Zamazenta</figcaption>
+                        </figure>
                 <p>Head back up to your house and talk to Mom again to get some Poke Balls and dollar dollar bills
                     y'all, then head down to Route 1 where you'll be forced into the tall grass. Catch some Pokemon here
                     to flesh out your party and level up your 'mons, then proceed into Wedgehurst.</p>
@@ -119,10 +127,18 @@
                 </ul>
             </code>
             </div>
+            <figure>
+                <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_9.jpeg" alt="Choosing starter">
+                <figcaption>First Battle with Hop</figcaption>
+                </figure>
                 <p>When you've beaten Hop, Leon will give you a letter of endorsement so you can enter the gym
                     challenge. Grab the Wishing Star off Hop so you can now Dynamax your Pokemon, then when you're done
                     speaking with Magnolia again, Hop will challenge you to a race to see who can catch the most Pokemon
                     on the way back to Wedgehurst.</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_7.jpeg" alt="Choosing starter">
+                        <figcaption>Receiving your Dynamax Band</figcaption>
+                        </figure>
                 <p>While you can spend time doing this, even if you run straight back and don't catch any, Hop will
                     still give you TM40 Swift as a gift. Head inside the train station, grab the Camping Gear off your
                     Mom, then jump on the train.</p>
@@ -135,6 +151,10 @@
                     speak to the couple to the left of the door to the platform. They'll give you a special version of
                     Pikachu or Eevee depending on the version you played. What's so special, I hear you ask? They can be
                     Dynamaxed!</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_6.jpeg" alt="Choosing starter">
+                        <figcaption>On the way to the wild area!</figcaption>
+                        </figure>
                 <p>Leave the station and you'll be in the Wild Area, where you can control the camera with the right
                     stick. Revolutionary! You don't need to do anything specific in the Wild Area right now, simply aim
                     to get to Motostoke at the other end.</p>
@@ -151,7 +171,11 @@
                 <p>Speak to Hop and enter the Motostoke Stadium, then get registered with the guy at the front desk.
                     Leave again and you'll be taken to the Budew Inn down the road, but don't go inside yet. Go west a
                     little further and speak to the two boys by a shipping crate with their mom.</p>
-                <p>They've lost their Minccino and it's up to you to find it for them. All you know is it likes water,
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_5.jpeg" alt="Choosing starter">
+                        <figcaption>Opening ceremony at motostoke stadium</figcaption>
+                        </figure>
+                    <p>They've lost their Minccino and it's up to you to find it for them. All you know is it likes water,
                     so walk back along to the stadium and outside are two fountains. Approach the one on the left and
                     whistle to make Minccino come out of hiding. Head back to the boys for a reward, then go inside the
                     Budew Inn.</p>
@@ -379,6 +403,10 @@
                     onto the pier to find five Net Balls, then head back up to the road and keep going east to find
                     Nessa chilling. Speak with her and she'll return to the gym so you can take on the challenge.</p>
                 <h2>Hulbury Gym</h2>
+                <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233712_3.jpeg" alt="Choosing starter">
+                        <figcaption>Entering the second Gym</figcaption>
+                        </figure>
                 <p>Since this is the Water-type gym, the puzzle you have to solve to reach the end is based on valves to
                     change the flow of water. Kick things off by heading to the right and taking on Gym Trainer Julia.
                 </p>
@@ -398,11 +426,20 @@
                     recommend switching out to one of your Pokemon that can simply absorb some hits while Drednaw is
                     Dynamaxed, then switching back to one of your favoured types like an Electric or Grass-type Pokemon
                     after the three turns are up.</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233712_2.jpeg" alt="Choosing starter">
+                        <figcaption>Use Dynamax of your own to counter the Gym Leaders!</figcaption>
+                        </figure>
                 <p>When you defeat Nessa, you gain the ability to catch Pokemon up to level 30, and you're given TM36
                     Whirlpool. Leave the gym and Oleana will meet you, telling you to hurry up to the seafood
                     restaurant. Go there and a brief cutscene will take place, which ends with Sonia being instructed to
                     go to Hammerlocke and find the vault. Afterwards, you'll be given TM79 Retaliate, and Hop will meet
                     you outside, saying next stop is back to Motostoke to take on the Fire-type gym.</p>
+
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233712_1.jpeg" alt="Choosing starter">
+                        <figcaption>Second Gym Success!</figcaption>
+                        </figure>
             </section>
         </div>
         <div id="navbar-container">
