--- a/index.html
+++ b/index.html
@@ -324,6 +324,10 @@
                     Center, next to the river. Interact with it and your character will dig up the Expert Belt, which
                     boosts the power of supereffective moves. </p>
                 <h2>Turtfield Gym</h2>
+                <figure>
+                    <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_4.jpeg" alt="Choosing starter">
+                    <figcaption>First gym</figcaption>
+                    </figure>
                 <p>When you get to the gym, speak with Ball Guy to get a Friend Ball. If you caught a Galarian Meowth on
                     Route 4, you can trade it with a girl called Mattia in the gym lobby for a normal Meowth, so make
                     sure you do that. Afterwards, speak with the girl at the front to take on the Grass gym. We
@@ -333,11 +337,20 @@
                     fairly straightforward, but roaming Yampers in each section will try to stop you. Defeat the
                     trainers in each section to make the Yampers behave and when you've got to the end, you'll be able
                     to take on Milo.</p>
+
                 <p>After you've beaten Leah, head up the stairs to face off against Milo, the Grass-type gym leader. As
                     he's the first gym leader, he's not too difficult to defeat, but be prepared for him to Dynamax.</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_3.jpeg" alt="Choosing starter">
+                        <figcaption>Dynamax is very popular in the Galar Region</figcaption>
+                        </figure>
                 <p>After beating Milo, you'll earn the ability to catch Pokemon up to level 25, and you'll be given TM10
                     Magical Leaf. Leave the gym and head to Route 5, which is over the stone bridge in the corner of the
                     town.</p>
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_2.jpeg" alt="Choosing starter">
+                        <figcaption>First gym completed!</figcaption>
+                        </figure>
                 <h2>Route 5</h2>
                 <div class="encounter-container">
                 <code>
@@ -385,6 +398,11 @@
                     until you reach Hop, who wants another battle. Cross the bridge and you'll find another open area,
                     including another trainer or two. Head through the enormous archway and congratulations, you've made
                     it to Hulbury!</p>
+
+                    <figure>
+                        <img src="https://raw.githubusercontent.com/cgaspar84/web_responsive_challenge_3/main/img/Internet_20220731_233457_1.jpeg" alt="Choosing starter">
+                        <figcaption>Relax from battles by setting up a camp to play with your pokemon.</figcaption>
+                        </figure>
             </section>
             <section id="Hulbury" class="main-section">
                 <header>Hulbury</header>
